All tests passing, need to add in food eating functionality.